test/corpus/bank_pseudos.txt
==========================
bank_call / bank_jump pseudos
==========================

bank_call greet
bank_jump cleanup

---
(source_file
  (newline)
    (instruction
      (mnemonic)
      (operands (identifier)))
    (newline)
    (instruction
      (mnemonic)
      (operands (identifier)))
    (newline))
